--- a/jupiter-swap-api-client/Cargo.toml
+++ b/jupiter-swap-api-client/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "jupiter-swap-api-client"
 version = "0.1.0"
-description = "Jupiter Swap API rust client"
+description = "Erichy-dev Jupiter Swap API rust client"
 edition = { workspace = true }
+license = "MIT"
+repository = "https://github.com/erichy-dev/jupiter-swap-api-client"
+keywords = ["solana", "jupiter", "swap", "api", "client"]
+categories = ["api-bindings", "cryptography::cryptocurrencies"]
 
 [dependencies]
 anyhow = "1"
