--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,12 @@
 [workspace]
 members = [
     "jupiter-swap-api-client",
-    "example",
 ]
 
 [workspace.package]
 edition = "2021"
 
 [workspace.dependencies]
-solana-sdk = "~2.0"
+solana-sdk = "1.17"
 solana-client = "~2.0"
-solana-account-decoder = "~2.0"
+solana-account-decoder = "1.17"
