--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -6,7 +6,7 @@ edition = { workspace = true }
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-jupiter-swap-api-client = { path = "../jupiter-swap-api-client" }
+jupiter-swap-api-client-erichy-dev = { path = "../jupiter-swap-api-client" }
 solana-sdk = { workspace = true }
 solana-client = { workspace = true }
 bincode = "1.3.3"
